# darwin

./: .gitignore  README.md  prime_darwin_claude_goal_command.txt  pyproject.toml
agent-darwin/: pyproject.toml
agent-darwin/src/darwin/: cli.py
agent-darwin/src/darwin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: smoke_test_chunk_os.sh  smoke_test_eval_harness.sh  smoke_test_fast_track_bundle.sh  smoke_test_mcp_tools.py  smoke_test_multi_brain_operator.sh  smoke_test_repo_intake.sh  smoke_test_spec_surface.sh  smoke_test_status_doctor.sh  smoke_test_tool_registry.sh
src/darwin/: batch_plan_ops.py  brain_ops.py  chunk_ops.py  cli.py  common.py  core.py  eval_ops.py  feature_registry_ops.py  mcp_server.py  operator_ops.py  repo_intake_ops.py  spec_ops.py  status_ops.py  tool_registry_ops.py  worker_registry_ops.py
